--- a/wrangler.toml
+++ b/wrangler.toml
@@ -45,11 +45,11 @@ mode = "smart"
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#d1-databases
 [[d1_databases]]
 binding = "DB"
-database_name = "chat-msg-d1"
-database_id = "f76898f1-671d-4844-89e8-b460d73855b0"
+database_name = "tg-notion-db"
+database_id = "3bf05423-b762-4299-9f44-6bb80569b0cc"
 
 [triggers]
-crons = ["*/6 16 * * *"] # utc+8 0 0,1 * * *
+crons = ["30 15 * * *"] # utc+8 0 0,1 * * *
 
 # Bind a dispatch namespace. Use Workers for Platforms to deploy serverless functions programmatically on behalf of your customers.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#dispatch-namespace-bindings-workers-for-platforms
