--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
 		"@cloudflare/vitest-pool-workers": "^0.5.2",
 		"@cloudflare/workers-types": "^4.20241112.0",
 		"typescript": "^5.5.2",
-		"vitest": "2.0.5",
+		"vitest": "^2.1.9",
 		"wrangler": "^3.60.3"
 	},
 	"dependencies": {
-		"@codebam/cf-workers-telegram-bot": "^9.1.1",
 		"@google/generative-ai": "^0.21.0",
+		"grammy": "^1.21.1",
 		"openai": "^4.75.0",
 		"telegramify-markdown": "^1.2.2"
 	},
